# orthoflow

./: .buildinfo  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CONTRIBUTING.rst  LICENSE  README.md  README.rst  alignment.html  autobuilddocs.sh  citation.html  contributing.html  filter_orthofisher_res.sh  genindex.html  index.html  information_content_aa.tsv  information_content_nt.tsv  installation.html  intake.html  lock_conda_envs.sh  mkdocs.sh  objects.inv  orthologs.html  pyproject.toml  search.html  searchindex.js  smk-rule.html  supermatrix.html  workflow.html  workflow_dev.html
.doctrees/: alignment.doctree  citation.doctree  contributing.doctree  environment.pickle  index.doctree  installation.doctree  intake.doctree  orthologs.doctree  supermatrix.doctree  workflow.doctree  workflow_dev.doctree
.doctrees/main/: 1kp_tutorial.doctree  advanced_tutorial.doctree  alignment.doctree  beginner_tutorial.doctree  citation.doctree  configuration.doctree  contributing.doctree  gene_tree.doctree  input.doctree  installation.doctree  intake.doctree  orthofinder.doctree  orthofisher.doctree  orthologs.doctree  plant.doctree  report.doctree  reproduction_tutorial.doctree  rules.doctree  supermatrix.doctree  supertree.doctree  usage.doctree  workflow.doctree  workflow_dev.doctree  yeast.doctree
.github/workflows/: docs.yml  testing.yml  yeast.yml
_sources/: contributing.rst.txt  index.rst.txt  installation.rst.txt  intake.rst.txt  orthologs.rst.txt  workflow.rst.txt  workflow_dev.md.txt
_sources/main/: 1kp_tutorial.rst.txt  advanced_tutorial.rst.txt  alignment.rst.txt  beginner_tutorial.rst.txt  citation.rst.txt  gene_tree.rst.txt  input.rst.txt  installation.rst.txt  intake.rst.txt  orthofinder.rst.txt  plant.rst.txt  reproduction_tutorial.rst.txt  rules.md.txt  usage.rst.txt  workflow_dev.md.txt
config/: config.yml
docs/: citation.md  conf.py  contributing.rst  docs_config.yml  docs_input_sources.csv  index.rst  references.bib  supermatrix.rst  workflow.rst  workflow_dev.md
docs/docs/source/: references.bib
docs/scripts/: rule_description.py
docs/source/: conf.py  index.rst
docs/source/_static/: custom.css
main/: 1kp_tutorial.html  advanced_tutorial.html  alignment.html  beginner_tutorial.html  citation.html  configuration.html  contributing.html  gene_tree.html  input.html  installation.html  intake.html  orthofinder.html  orthofisher.html  orthologs.html  plant.html  report.html  reproduction_tutorial.html  rules.html  supermatrix.html  supertree.html  usage.html  workflow.html  workflow_dev.html  yeast.html
orthoflow/: main.py
orthoflow/config/: config.yml
orthoflow/workflow/: Snakefile
phyloflow/: main.py
phyloflow/config/: config.yml
phyloflow/workflow/: Snakefile
test-data/: KY819064.cds.fasta  MH591083.gb  MH591086.gb
tests/: common.py  conftest.py  test_add_taxon.py  test_alignment.py  test_filter_alignments.py  test_gbseqextractor.py  test_gene_tree.py  test_intake.py  test_intake_utils.py  test_invalid.py  test_mafft.py  test_orthofinder.py  test_orthofisher.py  test_orthologs.py  test_report.py  test_summary.py  test_supermatrix.py  test_supertree.py  test_translate.py  test_warnings.py
tests/test-data/: MH591085.gb  input_sources.concise.json  input_sources.concise.toml  input_sources.concise.yml  input_sources.json  input_sources.toml  input_sources.yml  report.html
tests/test-data-invalid/: .gitignore  KX808498-truncated.gb  KY819064-truncated.cds.fafafafa  KY819064-truncated.cds.toml  MH591083-truncated.gb  MH591084-truncated.gb.json  MH591085-truncated.gb  alphabet.gb  codons.fa  fasta_alphabet.fa  input_source_infinite.csv  input_sources.csv  input_sources_protein.csv  invalid.fa  invalid.gb  lowercase.fa  protein_intake.fa  protein_intake_truncated_lowercase.fa  protein_intake_truncated_lowercase.yml
tests/test-data-small/: .gitignore  KX808497-truncated.fa  KY509313-truncated.gb  KY819064-truncated.cds.fasta  KY819064-truncated.cds.toml  KY819064-truncated.cds.yaml  KY819064.cds.yaml  MH591084-truncated.gb  NC_026795-truncated.toml  NC_026795-truncated.txt  README.md  input_sources.csv  input_sources.json  input_sources.toml  input_sources.yml  input_sources_link.toml  output.txt
tests/test-data-yeast/: .gitignore  README.rst  ambrosiozyma_kashinagacola.max.pep  ambrosiozyma_monospora.max.pep  ascoidea_asiatica.max.pep  ascoidea_rubescens.max.pep  candida_auris.max.pep  run.sh  yeast5.csv
tests/unit/: common.py  test_add_taxon.py  test_gbseqextractor.py  test_mafft.py  test_translate.py
workflow/: Snakefile
workflow/envs/: gbseqextractor.yaml  intake.yaml  mafft.yaml  orthofinder.yaml
workflow/ext_scripts/: filter_OrthoFinder.py  filter_SCOG.pl
workflow/rules/: alignment.smk  intake.smk  orthologs.smk  supermatrix.smk
workflow/scripts/: CDSextract.py  TranslatorX.pl  add_taxon.py  add_taxon_to_seqID.py  filter_OrthoFinder.py  matching_CDS.py
workflow/test-data/: KX808497.fa  KX808498.gb  KY509313.gb  KY819064.cds.fasta  MH591079.gbk  MH591080.gbk  MH591081.gbk  MH591084.gb  NC_026795.txt  input_sources.csv
(+4192 files in other folders)
