[tool.poetry]
name = "phyloflow"
version = "0.1.0"
description = "A phylogenomic workflow developed in collaboration with Jo Birch from the University of Melbourne Herbarium"
authors = ["University of Melbourne"]
license = "Apache-2.0"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.8"
snakemake = { git = "https://github.com/rbturnbull/snakemake.git", branch = "bibtex" }
pandas = "1.2.5"
typer = "^0.4.1"
Flask = "^2.1.2"

[tool.poetry.dev-dependencies]
Sphinx = "^4.4.0"
nbsphinx = "^0.8.7"
sphinx-rtd-theme = "^1.0.0"
sphinx-autobuild = "^2021.3.14"
sphinx-copybutton = "^0.4.0"
sphinxcontrib-mermaid = "^0.7.1"
myst-parser = "^0.17.0"
pytest = "^7.1.1"
black = "^22.3.0"
isort = "^5.10.1"
pre-commit = "^2.17.0"
sphinxcontrib-bibtex = "^2.4.1"
ipdb = "^0.13.9"
conda-lock = {extras = ["pip_support"], version = "^1.0.5"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
skip_string_normalization = true

[tool.isort]
profile = "black"

[tool.pylint.messages_control]
disable = "C0330, C0326"

[tool.pylint.format]
max-line-length = "120"

[tool.snakefmt]
line_length = 120
include = '\.smk$|^Snakefile$'

[tool.poetry.scripts]
phyloflow = 'phyloflow.main:app'
